[package]
name = "syntect_server"
version = "1.0.0"
authors = ["Stephen Gutekanst <stephen.gutekanst@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
syntect = { git = "https://github.com/slimsag/syntect" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.0"
warp = { git = "https://github.com/seanmonstar/warp" }
tokio = { version = "1.6.1", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
